# nanohydra

./: README.md  requirements.txt
deployment/application/: CMakeLists.txt  Kconfig  app.c  custom.layout  deploy.sh  sdk.config
deployment/include/: hydra.h  hydra_defines.h
deployment/src/: hydra_classifier.c  hydra_convolve.c  hydra_forward.c  hydra_init.c  hydra_reset.c  hydra_sparse_scale.c  hydra_utils.c
pretrain/: profile_hydra_ecg5000.py  run_ecg5000.py  run_ucr_benchmark.py  run_ucr_benchmark_quant.py  test_fn.py
pretrain/nanohydra/: hydra.py  quantizer.py  setup.py
pretrain/nanohydra/optimized_fns/: combined_counting_opt_fn.pyx  conv1d_opt_orig.pyx  conv1d_opt_x_f32_w_b1.pyx  conv1d_opt_x_f32_w_f32.pyx  conv1d_opt_x_int16_w_b1.pyx  hard_counting_opt_fn.pyx  soft_counting_opt_fn.pyx
